Enhance scraper functionality by implementing realistic user-agent rotation and error handling. Update request delays to simulate human behavior and avoid detection. Adjust Docker configuration to change MongoDB port for conflict resolution. Improve logging for scraping processes and refine comments for clarity.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       MONGO_INITDB_DATABASE: recipes
       TZ: Europe/Paris
     ports:
-      - "127.0.0.1:27017:27017"  # Limité à localhost pour la sécurité
+      - "127.0.0.1:27018:27017"  # Limité à localhost pour la sécurité (port 27018 pour éviter conflit avec Portfolio)
     volumes:
       - mongodb_data:/data/db
       - mongodb_config:/data/configdb
