Update GitHub Actions workflow to use 'docker compose' commands instead of 'docker-compose' for improved compatibility. Add git stash command to prevent conflicts during pull operations and ensure smoother service management.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,22 +24,25 @@ jobs:
             # Aller dans le dossier du projet
             cd ~/GitHub/scraper_web_sql_nosql
             
+            # Sauvegarder les modifications locales (stash) pour éviter les conflits
+            git stash || true
+            
             # Récupérer les dernières modifications
             git pull origin main
             
-            # Arrêter les services
-            docker-compose down
+            # Arrêter les services (utiliser docker compose v2)
+            docker compose down || true
             
             # Reconstruire toutes les images avec --no-cache pour forcer la reconstruction
-            docker-compose build --no-cache
+            docker compose build --no-cache
             
             # Redémarrer tous les services
-            docker-compose up -d
+            docker compose up -d
             
             # Nettoyer les anciennes images
             docker image prune -f
             
             # Afficher le statut des services
-            docker-compose ps
+            docker compose ps
           EOF
 
