Update file permissions for several scripts and the API server. Modify docker-compose.yml to change the subnet from 192.168.100.0/24 to 192.168.200.0/24. Adjust Dockerfile to build the scraper binary from the entire package instead of a single file, enhancing build efficiency.

--- a/scraper/dockerfile
+++ b/scraper/dockerfile
@@ -18,10 +18,10 @@ RUN go mod download
 # Copier le code source du scraper
 COPY scraper/ ./scraper/
 
-# Construire le binaire avec versioning
+# Construire le binaire avec versioning (compiler tout le package scraper)
 RUN CGO_ENABLED=0 GOOS=linux go build \
     -ldflags="-s -w -X main.version=${VERSION} -X main.gitCommit=${GIT_COMMIT} -X main.buildTime=${BUILD_TIME}" \
-    -o scraper-binary ./scraper/scraper.go
+    -o scraper-binary ./scraper/
 
 # Étape 2 : Image finale minimale
 FROM scratch
